fix layout issue

--- a/src/style.css
+++ b/src/style.css
@@ -26,6 +26,7 @@ body{
 header{
     grid-row: 1/2;
     grid-column: 2/3;
+    min-height: 10vh;
 }
 header nav{
     display: flex;
@@ -66,6 +67,7 @@ main{
     margin: 4rem 0;
     padding: 2rem;
     box-shadow: 7px 7px #393939;
+    max-height: 80vh;
 }
 
 .sidebar{
@@ -76,6 +78,10 @@ main{
 
 .sidebar ul, .content p{
     color: var(--text-colour);
+}
+
+.project-list{
+    overflow: auto;
 }
 
 .add-btn-inline{
@@ -301,6 +307,8 @@ ul.styledList li{
 
 .todos{
     margin-top: 3rem;
+    max-height: 40vh;
+    overflow: auto;
 }
 
 #addTodo-btn{
